# django_example

./: .gitignore  Dockerfile  REST_API_SPEC.yaml  Readme.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: deploy.yml  integration.yml
book/: models.py  paginator.py  tests.py  urls.py  views.py
book/managers/: book_manager.py
book/migrations/: 0001_initial.py  0002_remove_book_book_isbn_e93b35_idx_book_published_at_and_more.py
book/serializers/: book_create_serializer.py  book_response_serializer.py  book_update_serilaizer.py  tag_serializer.py
common/: exceptions.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
jwt/: apps.py  authentication.py  manager.py  models.py  urls.py  views.py
jwt/migrations/: 0001_initial.py  0002_rename_refreshtoken_token_and_more.py
jwt_auth/: authentication.py  manager.py  models.py  tests.py  urls.py  views.py
jwt_auth/migrations/: 0002_rename_refreshtoken_token_and_more.py
loan/: manager.py  models.py  tests.py  urls.py  views.py
loan/migrations/: 0001_initial.py
loan/serializers/: loan_create_serlializer.py  loan_response_serializer.py  loan_update_serializer.py
locust/: health_check_stress_test.py  read_book_stress_test.py
scripts/: deploy.sh  docker-compose.yml  health-checker.sh
tag/: models.py  tests.py  urls.py  views.py
tag/migrations/: 0001_initial.py
tag/serializers/: tag_create_serializer.py  tag_serializer.py  (+1 more)
terraform/: ec2.tf  ecr.tf  main.tf  security_group.tf  variables.tf  vpc.tf
user/: manager.py  models.py  permissions.py  tests.py
(+8 files in other folders)
